<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistro">

    <EditText
        android:id="@+id/edt_dni"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/registro_dni"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_apellido" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/registro_nombre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_volver" />

    <EditText
        android:id="@+id/edt_contrasenia1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/registro_contrasenia"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario1" />

    <EditText
        android:id="@+id/edt_apellido"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/registro_apellido"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_dni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre" />

    <EditText
        android:id="@+id/edt_usuario1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/registro_usuario"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_contrasenia1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/registro_email"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_usuario1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_dni" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:text="@string/registro_btn_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_contrasenia1" />

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="131dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="34dp"
        android:text="@string/registro_btn_volver"
        app:layout_constraintBottom_toTopOf="@+id/edt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>