<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginEnd="47dp"
        android:text="@string/btn_registrar"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="203dp"
        android:text="@string/btn_loguear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_contrasenia" />

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="333dp"
        android:layout_height="56dp"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/editTextUsername_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_contrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_contrasenia"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginBottom="112dp"
        android:ems="10"
        android:hint="@string/ingresecontrasenia"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario" />
</androidx.constraintlayout.widget.ConstraintLayout>